objects/Opportunity_Tracking_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Tracking HIstory</relationshipLabel>
        <relationshipName>Opportunity_Tracking_HIstory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_text__c</fullName>
        <formula>text(Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedinCurrentFiscalMonth__c</fullName>
        <formula>if(Opportunity__r.Created_Fiscal_Month__c== Fiscal_Month__c,true,false)
&amp;&amp;
if( Opportunity__r.Fiscal_Year__c == Fiscal_Year__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedinCurrentFiscalMonth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_Name__c</fullName>
        <formula>CASE(Fiscal_Month__c, 
&apos;1&apos;, &quot;01-January&quot;, 
&apos;2&apos;, &quot;02-February&quot;, 
&apos;3&apos;, &quot;03-March&quot;, 
&apos;4&apos;, &quot;04-April&quot;, 
&apos;5&apos;, &quot;05-May&quot;, 
&apos;6&apos;, &quot;06-June&quot;, 
&apos;7&apos;, &quot;07-July&quot;, 
&apos;8&apos;, &quot;08-August&quot;, 
&apos;9&apos;, &quot;09-September&quot;, 
&apos;10&apos;, &quot;10-October&quot;, 
&apos;11&apos;, &quot;11-November&quot;, 
&apos;12&apos;, &quot;12-December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Month Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holistic_Flow_Stage__c</fullName>
        <label>Holistic Flow Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILC_Owned_Int__c</fullName>
        <formula>IF(Is_ILC_Owned__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILC Owned Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILC_Team_Owned_Int__c</fullName>
        <formula>IF (Is_ILC_Team_Owned__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILC Team Owned Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ILC_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ILC Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ILC_Team_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ILC Team Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Watson_Stage_Change__c</fullName>
        <formula>if(PLOC_stage__c!=PLOC_Old_Value__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Watson Stage Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Watson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Watson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateforLoad__c</fullName>
        <label>LastModifiedDateforLoad</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LaterChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LaterChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Tracking_HIstory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Team_Member__c</fullName>
        <label>Opportunity Team Member</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Tracking HIstory</relationshipLabel>
        <relationshipName>Opportunity_Tracking_HIstory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PLOC_Old_Value_F__c</fullName>
        <formula>CASE( PLOC_Old_Value__c ,
&apos;Identify Prospect (1.0)&apos;,&quot;01-Identify Prospect (1.0)&quot;,
&apos;Qualify Appointment Set (1.5)&apos;,&quot;02-Qualify Appointment Set (1.5)&quot;,
&apos;Qualify Prospect (2.0)&apos;,&quot;03-Qualify Prospect (2.0)&quot;,
&apos;Solution Appointment Set (3.0)&apos;,&quot;04-Solution Appointment Set (3.0)&quot;,
&apos;Introduce Solution (4.0)&apos;,&quot;05-Introduce Solution (4.0)&quot;,
&apos;Solution Introduction Complete (5.0)&apos;,&quot;06-Solution Introduction Complete (5.0)&quot;,
&apos;Discovery Workshop (Verbal Commitment) (6.0)&apos;,&quot;07-Discovery Workshop (Verbal Commitment) (6.0)&quot;,
&apos;Virtual Workshop (6.2)&apos;,&quot;08-Virtual Workshop (6.2)&quot;,
&apos;Onsite Discovery Roundtable (6.3)&apos;,&quot;09-Onsite Discovery Roundtable (6.3)&quot;,
&apos;Onsite Discovery Workshop (6.5)&apos;,&quot;10-Onsite Discovery Workshop (6.5)&quot;,
&apos;Present Solution (7.0)&apos;,&quot;11-Present Solution (7.0)&quot;,
&apos;Due Dilligence &amp; Planning (8.0)&apos;,&quot;12-Due Dilligence &amp; Planning (8.0)&quot;,
&apos;Negotiate SOW (9.0)&apos;,&quot;13-Negotiate SOW (9.0)&quot;,
&apos;Finalize SOW (10.0)&apos;,&quot;14-Finalize SOW (10.0)&quot;,
&apos;Integration and Implementation (11.0)&apos;,&quot;15-Integration and Implementation (11.0)&quot;,
&apos;Manage Account (12.0)&apos;,&quot;16-Manage Account (12.0)&quot;,
&apos;District not ready - Leadership changes (200.1)&apos;,&quot;17-District not ready - Leadership changes (200.1)&quot;,
&apos;District not ready - Data Issues (200.2)&apos;,&quot;18-District not ready - Data Issues (200.2)&quot;,
&apos;District not ready - Technology Issue (200.3)&apos;,&quot;19-District not ready - Technology Issue (200.3)&quot;,
&apos;District not ready - Funding Issue (200.4)&apos;,&quot;20-District not ready - Funding Issue (200.4)&quot;,
&apos;District not interested (200.5)&apos;,&quot;21-District not interested (200.5)&quot;,
&apos;IBM Target (200.6)&apos;,&quot;22-IBM Target (200.6)&quot;,
&apos;District Not Ready - Resources (200.7)&apos;,&quot;23-District Not Ready - Resources (200.7)&quot;,
&apos;District Not Ready - Standards (200.8)&apos;,&quot;24-District Not Ready - Standards (200.8)&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLOC Old Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLOC_Old_Value__c</fullName>
        <label>PLOC Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLOC_stage_F__c</fullName>
        <formula>CASE( PLOC_stage__c,
&apos;Identify Prospect (1.0)&apos;,&quot;01-Identify Prospect (1.0)&quot;,
&apos;Qualify Appointment Set (1.5)&apos;,&quot;02-Qualify Appointment Set (1.5)&quot;,
&apos;Qualify Prospect (2.0)&apos;,&quot;03-Qualify Prospect (2.0)&quot;,
&apos;Solution Appointment Set (3.0)&apos;,&quot;04-Solution Appointment Set (3.0)&quot;,
&apos;Introduce Solution (4.0)&apos;,&quot;05-Introduce Solution (4.0)&quot;,
&apos;Solution Introduction Complete (5.0)&apos;,&quot;06-Solution Introduction Complete (5.0)&quot;,
&apos;Discovery Workshop (Verbal Commitment) (6.0)&apos;,&quot;07-Discovery Workshop (Verbal Commitment) (6.0)&quot;,
&apos;Virtual Workshop (6.2)&apos;,&quot;08-Virtual Workshop (6.2)&quot;,
&apos;Onsite Discovery Roundtable (6.3)&apos;,&quot;09-Onsite Discovery Roundtable (6.3)&quot;,
&apos;Onsite Discovery Workshop (6.5)&apos;,&quot;10-Onsite Discovery Workshop (6.5)&quot;,
&apos;Present Solution (7.0)&apos;,&quot;11-Present Solution (7.0)&quot;,
&apos;Due Dilligence &amp; Planning (8.0)&apos;,&quot;12-Due Dilligence &amp; Planning (8.0)&quot;,
&apos;Negotiate SOW (9.0)&apos;,&quot;13-Negotiate SOW (9.0)&quot;,
&apos;Finalize SOW (10.0)&apos;,&quot;14-Finalize SOW (10.0)&quot;,
&apos;Integration and Implementation (11.0)&apos;,&quot;15-Integration and Implementation (11.0)&quot;,
&apos;Manage Account (12.0)&apos;,&quot;16-Manage Account (12.0)&quot;,
&apos;District not ready - Leadership changes (200.1)&apos;,&quot;17-District not ready - Leadership changes (200.1)&quot;,
&apos;District not ready - Data Issues (200.2)&apos;,&quot;18-District not ready - Data Issues (200.2)&quot;,
&apos;District not ready - Technology Issue (200.3)&apos;,&quot;19-District not ready - Technology Issue (200.3)&quot;,
&apos;District not ready - Funding Issue (200.4)&apos;,&quot;20-District not ready - Funding Issue (200.4)&quot;,
&apos;District not interested (200.5)&apos;,&quot;21-District not interested (200.5)&quot;,
&apos;IBM Target (200.6)&apos;,&quot;22-IBM Target (200.6)&quot;,
&apos;District Not Ready - Resources (200.7)&apos;,&quot;23-District Not Ready - Resources (200.7)&quot;,
&apos;District Not Ready - Standards (200.8)&apos;,&quot;24-District Not Ready - Standards (200.8)&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLOC stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLOC_stage__c</fullName>
        <label>PLOC stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLS_Key__c</fullName>
        <label>PLS Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pillar_Key__c</fullName>
        <label>Pillar Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Week__c</fullName>
        <label>Pipeline Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Summary_Stage__c</fullName>
        <label>Previous Summary Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Type__c</fullName>
        <label>Product Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Age__c</fullName>
        <label>Stage Age</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Old_Value__c</fullName>
        <label>Stage Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>text(Account__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Stage_Old_Value__c</fullName>
        <label>Summary Stage Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Stage__c</fullName>
        <label>Summary Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>WatsonStageChange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watson_Active__c</fullName>
        <formula>if(CONTAINS(PLOC_stage__c , &apos;200&apos;) ,false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watson Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watson_Door_Opener__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Watson Door Opener</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watson_Notes__c</fullName>
        <label>Watson Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Watson__c</fullName>
        <formula>Opportunity__r.Watson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watson?</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Tracking History</label>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Opportunity Tracking History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Tracking HIstory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>